--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
     
 
 // when this function is activated, it will generate a random password from string 'char'
-    function pass(len){
-      var char = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^&*()'
+    function pass(){
+      var char = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'
+      var num ="1234567890"
+      var spec="!$%^&*()@#"
+
+      var query = confirm("Include Numbers?");
+      if(query==true){
+        char = char + num;
+      }
+
+      var query2 = confirm("Include special characters?")
+      if(query2==true){
+        char = char + spec;
+      }
       var pwd = " ";
 
       
